--- a/poster/bibliography.bib
+++ b/poster/bibliography.bib
@@ -1,49 +1,38 @@
-@article{meyer2021fisher,
-  author = {Johannes Jakob Meyer},
-  title = {Fisher Information in Noisy Intermediate-Scale Quantum Applications},
-  journal = {Quantum},
-  year = {2021},
-  url = {https://quantum-journal.org/papers/q-2021-09-09-539/}
-}
+@article{Vatan_2004,
+   title={Optimal quantum circuits for general two-qubit gates},
+   volume={69},
+   ISSN={1094-1622},
+   url={http://dx.doi.org/10.1103/PhysRevA.69.032315},
+   DOI={10.1103/physreva.69.032315},
+   number={3},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)},
+   author={Vatan, Farrokh and Williams, Colin},
+   year={2004},
+   month=mar }
 
-@article{liu2019qfim,
-  author = {Jing Liu and Haidong Yuan and Xiao-Ming Lu and Xiaoguang Wang},
-  title = {Quantum Fisher information matrix and multiparameter estimation},
-  journal = {arXiv preprint arXiv:1907.08037v3},
-  year = {2019},
-  url = {https://arxiv.org/abs/1907.08037v3}
-}
+@article{Sim_2019,
+   title={Expressibility and Entangling Capability of Parameterized Quantum Circuits for Hybrid Quantum‐Classical Algorithms},
+   volume={2},
+   ISSN={2511-9044},
+   url={http://dx.doi.org/10.1002/qute.201900070},
+   DOI={10.1002/qute.201900070},
+   number={12},
+   journal={Advanced Quantum Technologies},
+   publisher={Wiley},
+   author={Sim, Sukin and Johnson, Peter D. and Aspuru‐Guzik, Alán},
+   year={2019},
+   month=oct }
 
-@article{hwang2024fadam,
-  author = {Dongseong Hwang},
-  title = {FAdam: Adam is a Natural Gradient Optimizer using Diagonal Empirical Fisher Information},
-  journal = {arXiv preprint arXiv:2405.12807v11},
-  year = {2024},
-  url = {https://arxiv.org/abs/2405.12807v11}
-}
-
-@online{IBM,
-  title     = {IBM Quantum Learning: Variational Algorithm Design},
-  url       = {https://learning.quantum.ibm.com/},
-  urldate   = {2025-06-12}
-}
-
-@inproceedings{rivero2020,
-  author    = {Pedro Rivero and I. Cloet and Z. Sullivan},
-  year      = {2020},
-  title     = {An optimal quantum sampling regression algorithm for variational eigensolving in the low qubit number regime},
-  doi       = {10.26226/morressier.5fa409874d4e91fe5c54b993},
-}
-
-@online{Sobol,
-  title     = {Sobol sequence},
-  url       = {https://en.wikipedia.org/wiki/Sobol_sequence},
-  urldate   = {2025-06-12}
-}
-
-@online{gaussian,
-  title     = {Gaussian process},
-  url       = {https://scikit-learn.org/stable/modules/gaussian_process.html},
-  urldate   = {2025-06-12}
-}
-
+@article{Meyer_2002,
+   title={Global entanglement in multiparticle systems},
+   volume={43},
+   ISSN={1089-7658},
+   url={http://dx.doi.org/10.1063/1.1497700},
+   DOI={10.1063/1.1497700},
+   number={9},
+   journal={Journal of Mathematical Physics},
+   publisher={AIP Publishing},
+   author={Meyer, David A. and Wallach, Nolan R.},
+   year={2002},
+   month=sep, pages={4273–4278} }
