--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -122,3 +122,17 @@ abstract = {Reverse-time stochastic diffusion equation models are defined and it
    author={Sim, Sukin and Johnson, Peter D. and Aspuru‐Guzik, Alán},
    year={2019},
    month=oct }
+
+@article{Meyer_2002,
+   title={Global entanglement in multiparticle systems},
+   volume={43},
+   ISSN={1089-7658},
+   url={http://dx.doi.org/10.1063/1.1497700},
+   DOI={10.1063/1.1497700},
+   number={9},
+   journal={Journal of Mathematical Physics},
+   publisher={AIP Publishing},
+   author={Meyer, David A. and Wallach, Nolan R.},
+   year={2002},
+   month=sep, pages={4273–4278} }
+
