--- a/poster/bibliography.bib
+++ b/poster/bibliography.bib
@@ -36,3 +36,23 @@
    author={Meyer, David A. and Wallach, Nolan R.},
    year={2002},
    month=sep, pages={4273–4278} }
+
+@misc{cacioppo2023quantumdiffusionmodels,
+      title={Quantum Diffusion Models}, 
+      author={Andrea Cacioppo and Lorenzo Colantonio and Simone Bordoni and Stefano Giagu},
+      year={2023},
+      eprint={2311.15444},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2311.15444}, 
+}
+
+@misc{lin2026quantumsuperresolutionadaptivenonlocal,
+      title={Quantum Super-resolution by Adaptive Non-local Observables}, 
+      author={Hsin-Yi Lin and Huan-Hsin Tseng and Samuel Yen-Chi Chen and Shinjae Yoo},
+      year={2026},
+      eprint={2601.14433},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2601.14433}, 
+}
